Prevent content cut offs

--- a/solution/ui/src/pages/index.less
+++ b/solution/ui/src/pages/index.less
@@ -4,7 +4,6 @@
   color: @sba-red;
 }
 
-
 @media print {
   .bec-header, .becFooter {
     visibility: hidden;
@@ -13,12 +12,18 @@
 
   .resultsContainer {
 
-    h1 {
-      height: 12vh;
+    .breakEvenWelcome-container{
+      .ui.grid {
+        align-items: start;
+      }
+    }
+
+    .gradientBackground {
+      height: 25vh;
     }
 
     .topRow {
-      height: 88vh;
+      height: 80vh;
     }
 
     .graphRow {
@@ -27,6 +32,11 @@
 
     .tableRow {
       height: 90vh;
+    }
+
+    .topRow, .graphRow, .tableRow {
+      display: inline-block !important;
+      break-inside: avoid;
     }
 
     .runningTotals-container {
